Closed
Bug 801151
Opened 13 years ago
Closed 13 years ago
When leaving private browsing, we set the non-private flag on the existing docshells too soon
Categories
(Firefox :: Private Browsing, defect)
Tracking
()
RESOLVED
FIXED
Firefox 19
| Tracking | Status | |
|---|---|---|
| firefox18 | --- | unaffected |
| firefox19 | + | fixed |
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
Attachments
(1 file)
|
3.20 KB,
patch
|
jdm
:
review+
|
Details | Diff | Splinter Review |
This is a regression from bug 795556. Here's what happens. If you leave PB mode when a page is loading, the code at the beginning of _onBeforePrivateBrowsingModeChange sets the docshell flag on everything to false. Then we call into sessionstore to restore to a blank slate, which means that we'll stop network activity on that tab. Then the progress monitor code in browser.js sees that, thinks that the network load is done, and sees that there's no favicon loaded, so it calls tabbrowser's useDefaultIcon, which tries to load the {url}/favicon.ico file. At this point the tab lacks the private bit set, which means that the favicon for that page gets loaded in non-private mode.
This sucks. These sorts of race conditions will go away once we move away from the global PB mode, but for now we need to set the flag after the sessionstore goof in _onBeforePrivateBrowsingModeChange happens when you're leaving PB mode.
| Assignee | ||
Comment 1•13 years ago
|
||
Hmm, doing that does not seem to be enough. Investigating why.
| Assignee | ||
Comment 2•13 years ago
|
||
(In reply to Ehsan Akhgari [:ehsan] from comment #1)
> Hmm, doing that does not seem to be enough. Investigating why.
That is because the concept of boolean variables is not entirely understood by me. ;-)
| Assignee | ||
Comment 3•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #670982 -
Flags: review?(josh) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Target Milestone: --- → Firefox 19
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Updated•13 years ago
|
status-firefox19:
affected → ---
| Assignee | ||
Updated•13 years ago
|
status-firefox19:
--- → fixed
Updated•13 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•