Bug 801151 - Make sure that favicon loads from tabs which are loading right near the end of a private browsing session do not into the non-private session; r=jdm